--- a/javascript/ES6/07.函数的扩展.md
+++ b/javascript/ES6/07.函数的扩展.md
@@ -51,7 +51,7 @@ p // { x: 0, y: 0 }
 
 除了简洁，ES6 的写法还有两个好处：首先，阅读代码的人，可以立刻意识到哪些参数是可以省略的，不用查看函数体或文档；其次，有利于将来的代码优化，即使未来的版本在对外接口中，彻底拿掉这个参数，也不会导致以前的代码无法运行。
 
-参数变量是默认声明的，所以不能用`let`或`const`再次声明。
+> **1.参数变量是默认声明的，所以不能用`let`或`const`再次声明。**
 
 ```javascript
 function foo(x = 5) {
@@ -62,7 +62,7 @@ function foo(x = 5) {
 
 上面代码中，参数变量`x`是默认声明的，在函数体中，不能用`let`或`const`再次声明，否则会报错。
 
-使用参数默认值时，函数不能有同名参数。
+> **2.使用参数默认值时，函数不能有同名参数。**
 
 ```javascript
 // 不报错
@@ -77,7 +77,7 @@ function foo(x, x, y = 1) {
 // SyntaxError: Duplicate parameter name not allowed in this context
 ```
 
-另外，一个容易忽略的地方是，参数默认值不是传值的，而是每次都重新计算默认值表达式的值。也就是说，参数默认值是惰性求值的。
+> **3.另外，一个容易忽略的地方是，参数默认值不是传值的，而是每次都重新计算默认值表达式的值。也就是说，参数默认值是惰性求值的。**
 
 ```javascript
 let x = 99;
@@ -93,11 +93,12 @@ foo() // 101
 
 上面代码中，参数`p`的默认值是`x + 1`。这时，每次调用函数`foo`，都会重新计算`x + 1`，而不是默认`p`等于 100。
 
-## 1.2与解构赋值默认值结合使用
+### 1.2与解构赋值默认值结合使用
 
 参数默认值可以与解构赋值的默认值，结合起来使用。
 
 ```javascript
+//只使用了对象的解构赋值默认值，没有使用函数参数的默认值
 function foo({x, y = 5}) {
   console.log(x, y);
 }
@@ -147,7 +148,7 @@ fetch('http://example.com')
 
 上面代码中，函数`fetch`没有第二个参数时，函数参数的默认值就会生效，然后才是解构赋值的默认值生效，变量`method`才会取到默认值`GET`。
 
-作为练习，请问下面两种写法有什么差别？
+> **作为练习，请问下面两种写法有什么差别？**
 
 ```javascript
 // 写法一
@@ -186,7 +187,7 @@ m2({z: 3}) // [undefined, undefined]
 
 ### 1.3参数默认值的位置
 
-通常情况下，定义了默认值的参数，应该是函数的尾参数。因为这样比较容易看出来，到底省略了哪些参数。如果非尾部的参数设置默认值，实际上这个参数是没法省略的。
+通常情况下，定义了默认值的参数，应该是函数的尾参数。因为这样比较容易看出来，到底省略了哪些参数。**如果非尾部的参数设置默认值，实际上这个参数是没法省略的。**
 
 ```javascript
 // 例一
@@ -252,7 +253,7 @@ foo(undefined, null)
 
 ### 1.5作用域
 
-一旦设置了参数的默认值，函数进行声明初始化时，参数会形成一个单独的作用域（context）。等到初始化结束，这个作用域就会消失。这种语法行为，在不设置参数默认值时，是不会出现的。
+==一旦设置了参数的默认值，函数进行声明初始化时，参数会形成一个单独的作用域（context）==。等到初始化结束，这个作用域就会消失。这种语法行为，在不设置参数默认值时，是不会出现的。
 
 ```javascript
 var x = 1;
@@ -279,7 +280,7 @@ function f(y = x) {
 f() // 1
 ```
 
-上面代码中，函数`f`调用时，参数`y = x`形成一个单独的作用域。这个作用域里面，变量`x`本身没有定义，所以指向外层的全局变量`x`。函数调用时，函数体内部的局部变量`x`影响不到默认值变量`x`。
+上面代码中，函数`f`调用时，参数`y = x`形成一个单独的作用域。这个作用域里面，变量`x`本身没有定义，所以指向外层的全局变量`x`。==函数调用时，函数体内部的局部变量`x`影响不到默认值变量`x`。==
 
 如果此时，全局变量`x`不存在，就会报错。
 
@@ -383,9 +384,9 @@ foo()
 
 上面代码的`foo`函数，如果调用的时候没有参数，就会调用默认值`throwIfMissing`函数，从而抛出一个错误。
 
-从上面代码还可以看到，参数`mustBeProvided`的默认值等于`throwIfMissing`函数的运行结果（注意函数名`throwIfMissing`之后有一对圆括号），这表明参数的默认值不是在定义时执行，而是在运行时执行。如果参数已经赋值，默认值中的函数就不会运行。
+从上面代码还可以看到，参数`mustBeProvided`的默认值等于`throwIfMissing`函数的运行结果（注意函数名`throwIfMissing`之后有一对圆括号），==这表明参数的默认值不是在定义时执行，而是在运行时执行==。如果参数已经赋值，默认值中的函数就不会运行。
 
-另外，可以将参数默认值设为`undefined`，表明这个参数是可以省略的。
+> **另外，可以将参数默认值设为`undefined`，表明这个参数是可以省略的。**
 
 ```javascript
 function foo(optional = undefined) { ··· }
@@ -439,7 +440,7 @@ var a = [];
 push(a, 1, 2, 3)
 ```
 
-注意，rest 参数之后不能再有其他参数（即只能是最后一个参数），否则会报错。
+> **注意，rest 参数之后不能再有其他参数（即只能是最后一个参数），否则会报错。**
 
 ```javascript
 // 报错
@@ -448,7 +449,7 @@ function f(a, ...b, c) {
 }
 ```
 
-函数的`length`属性，不包括 rest 参数。
+> 函数的`length`属性，不包括 rest 参数。
 
 ```javascript
 (function(a) {}).length  // 1
@@ -619,7 +620,7 @@ var sum = function(num1, num2) {
 var sum = (num1, num2) => { return num1 + num2; }
 ```
 
-由于大括号被解释为代码块，所以如果箭头函数直接返回一个对象，必须在对象外面加上括号，否则会报错。
+> **由于大括号被解释为代码块，所以如果箭头函数直接返回一个对象，必须在对象外面加上括号，否则会报错。**
 
 ```javascript
 // 报错
@@ -638,7 +639,7 @@ foo() // undefined
 
 上面代码中，原始意图是返回一个对象`{ a: 1 }`，但是由于引擎认为大括号是代码块，所以执行了一行语句`a: 1`。这时，`a`可以被解释为语句的标签，因此实际执行的语句是`1;`，然后函数就结束了，没有返回值。
 
-如果箭头函数只有一行语句，且不需要返回值，可以采用下面的写法，就不用写大括号了。
+> **如果箭头函数只有一行语句，且不需要返回值，可以采用下面的写法，就不用写大括号了。**
 
 ```javascript
 let fn = () => void doesNotReturn();
@@ -714,7 +715,7 @@ headAndTail(1, 2, 3, 4, 5)
 
 （4）不可以使用`yield`命令，因此箭头函数不能用作 Generator 函数。
 
-上面四点中，第一点尤其值得注意。`this`对象的指向是可变的，但是在箭头函数中，它是固定的。
+> **上面四点中，第一点尤其值得注意。`this`对象的指向是可变的，但是在箭头函数中，它是固定的。**
 
 ```javascript
 function foo() {
@@ -854,7 +855,7 @@ foo(2, 4, 6, 8)
 
 由于箭头函数使得`this`从“动态”变成“静态”，下面两个场合不应该使用箭头函数。
 
-第一个场合是定义对象的方法，且该方法内部包括`this`。
+> **第一个场合是定义对象的方法，且该方法内部包括`this`。**
 
 ```javascript
 const cat = {
@@ -865,9 +866,9 @@ const cat = {
 }
 ```
 
-上面代码中，`cat.jumps()`方法是一个箭头函数，这是错误的。调用`cat.jumps()`时，如果是普通函数，该方法内部的`this`指向`cat`；如果写成上面那样的箭头函数，使得`this`指向全局对象，因此不会得到预期结果。这是因为对象不构成单独的作用域，导致`jumps`箭头函数定义时的作用域就是全局作用域。
+上面代码中，`cat.jumps()`方法是一个箭头函数，这是错误的。调用`cat.jumps()`时，如果是普通函数，该方法内部的`this`指向`cat`；如果写成上面那样的箭头函数，使得`this`指向全局对象，因此不会得到预期结果。==这是因为对象不构成单独的作用域，导致`jumps`箭头函数定义时的作用域就是全局作用域==。
 
-第二个场合是需要动态`this`的时候，也不应使用箭头函数。
+> **第二个场合是需要动态`this`的时候，也不应使用箭头函数。**
 
 ```javascript
 var button = document.getElementById('press');
@@ -949,7 +950,7 @@ var fix = f => (x => f(v => x(x)(v)))
 
 ### 6.1什么是尾调用
 
-尾调用（Tail Call）是函数式编程的一个重要概念，本身非常简单，一句话就能说清楚，就是指某个函数的最后一步是调用另一个函数。
+尾调用（Tail Call）是函数式编程的一个重要概念，本身非常简单，一句话就能说清楚，**就是指某个函数的最后一步是调用另一个函数。**
 
 ```javascript
 function f(x){
@@ -988,7 +989,7 @@ function f(x){
 }
 ```
 
-尾调用不一定出现在函数尾部，只要是最后一步操作即可。
+> **尾调用不一定出现在函数尾部，只要是最后一步操作即可。**
 
 ```javascript
 function f(x) {
