--- a/javascript/ES6/08.数组的扩展.md
+++ b/javascript/ES6/08.数组的扩展.md
@@ -56,7 +56,7 @@ const arr = [
 // [1]
 ```
 
-注意，只有函数调用时，扩展运算符才可以放在圆括号中，否则会报错。
+> **注意，只有函数调用时，扩展运算符才可以放在圆括号中，否则会报错。**
 
 ```javascript
 (...[1, 2])
@@ -133,7 +133,7 @@ new Date(...[2015, 1, 1]);
 
 ### 1.3扩展运算符的应用
 
-**（1）复制数组**
+#### 1.3.1复制数组
 
 数组是复合的数据类型，直接复制的话，只是复制了指向底层数据结构的指针，而不是克隆一个全新的数组。
 
@@ -171,7 +171,7 @@ const [...a2] = a1;
 
 上面的两种写法，`a2`都是`a1`的克隆。
 
-**（2）合并数组**
+#### 1.3.2合并数组
 
 扩展运算符提供了数组合并的新写法。
 
@@ -204,7 +204,7 @@ a4[0] === a1[0] // true
 
 上面代码中，`a3`和`a4`是用两种不同方法合并而成的新数组，但是它们的成员都是对原数组成员的引用，这就是浅拷贝。如果修改了引用指向的值，会同步反映到新数组。
 
-**（3）与解构赋值结合**
+#### 1.3.3与解构赋值结合
 
 扩展运算符可以与解构赋值结合起来，用于生成数组。
 
@@ -241,7 +241,7 @@ const [first, ...middle, last] = [1, 2, 3, 4, 5];
 // 报错
 ```
 
-**（4）字符串**
+#### 1.3.4字符串
 
 扩展运算符还可以将字符串转为真正的数组。
 
@@ -281,7 +281,7 @@ str.split('').reverse().join('')
 
 上面代码中，如果不用扩展运算符，字符串的`reverse`操作就不正确。
 
-**（5）实现了 Iterator 接口的对象**
+#### 1.3.5实现了 Iterator 接口的对象
 
 任何定义了遍历器（Iterator）接口的对象（参阅 Iterator 一章），都可以用扩展运算符转为真正的数组。
 
@@ -322,7 +322,7 @@ let arr = [...arrayLike];
 
 上面代码中，`arrayLike`是一个类似数组的对象，但是没有部署 Iterator 接口，扩展运算符就会报错。这时，可以改为使用`Array.from`方法将`arrayLike`转为真正的数组。
 
-**（6）Map 和 Set 结构，Generator 函数**
+#### 1.3.6Map 和 Set 结构，Generator 函数
 
 扩展运算符内部调用的是数据结构的 Iterator 接口，因此只要具有 Iterator 接口的对象，都可以使用扩展运算符，比如 Map 结构。
 
@@ -378,7 +378,7 @@ var arr1 = [].slice.call(arrayLike); // ['a', 'b', 'c']
 let arr2 = Array.from(arrayLike); // ['a', 'b', 'c']
 ```
 
-实际应用中，常见的类似数组的对象是 DOM 操作返回的 NodeList 集合，以及函数内部的`arguments`对象。`Array.from`都可以将它们转为真正的数组。
+实际应用中，常见的类似数组的对象是 `DOM `操作返回的 `NodeList `集合，以及函数内部的`arguments`对象。`Array.from`都可以将它们转为真正的数组。
 
 ```javascript
 // NodeList对象
@@ -408,14 +408,14 @@ Array.from(namesSet) // ['a', 'b']
 
 上面代码中，字符串和 Set 结构都具有 Iterator 接口，因此可以被`Array.from`转为真正的数组。
 
-如果参数是一个真正的数组，`Array.from`会返回一个一模一样的新数组。
+> 如果参数是一个真正的数组，`Array.from`会返回一个一模一样的新数组。
 
 ```javascript
 Array.from([1, 2, 3])
 // [1, 2, 3]
 ```
 
-值得提醒的是，扩展运算符（`...`）也可以将某些数据结构转为数组。
+> 值得提醒的是，扩展运算符（`...`）也可以将某些数据结构转为数组。
 
 ```javascript
 // arguments对象
@@ -593,7 +593,7 @@ i32a.copyWithin(0, 2);
 
 ## 5.数组实例的 find() 和 findIndex()
 
-数组实例的`find`方法，用于找出第一个符合条件的数组成员。它的参数是一个回调函数，所有数组成员依次执行该回调函数，直到找出第一个返回值为`true`的成员，然后返回该成员。如果没有符合条件的成员，则返回`undefined`。
+数组实例的`find`方法，用于找出第一个符合条件的数组成员。**它的参数是一个回调函数，所有数组成员依次执行该回调函数，直到找出第一个返回值为`true`的成员，然后返回该成员。如果没有符合条件的成员，则返回`undefined`。**
 
 ```javascript
 [1, 4, -5, 10].find((n) => n < 0)
@@ -630,7 +630,7 @@ let person = {name: 'John', age: 20};
 
 上面的代码中，`find`函数接收了第二个参数`person`对象，回调函数中的`this`对象指向`person`对象。
 
-另外，这两个方法都可以发现`NaN`，弥补了数组的`indexOf`方法的不足。
+> 另外，这两个方法都可以发现`NaN`，弥补了数组的`indexOf`方法的不足。
 
 ```javascript
 [NaN].indexOf(NaN)
@@ -665,7 +665,7 @@ new Array(3).fill(7)
 
 上面代码表示，`fill`方法从 1 号位开始，向原数组填充 7，到 2 号位之前结束。
 
-注意，如果填充的类型为对象，那么被赋值的是同一个内存地址的对象，而不是深拷贝对象。
+> 注意，如果填充的类型为对象，那么被赋值的是同一个内存地址的对象，而不是深拷贝对象。
 
 ```javascript
 let arr = new Array(3).fill({name: "Mike"});
