--- a/javascript/ES6/01.let 和 const 命令.md
+++ b/javascript/ES6/01.let 和 const 命令.md
@@ -416,7 +416,7 @@ function f() { console.log('I am outside!'); }
 }
 ```
 
-另外，还有一个需要注意的地方。ES6 的块级作用域必须有大括号，如果没有大括号，JavaScript 引擎就认为不存在块级作用域。
+> 另外，还有一个需要注意的地方。ES6 的块级作用域必须有大括号，如果没有大括号，JavaScript 引擎就认为不存在块级作用域。
 
 ```js
 // 第一种写法，报错
@@ -430,7 +430,7 @@ if (true) {
 
 上面代码中，第一种写法没有大括号，所以不存在块级作用域，而`let`只能出现在当前作用域的顶层，所以报错。第二种写法有大括号，所以块级作用域成立。
 
-函数声明也是如此，严格模式下，函数只能声明在当前作用域的顶层。
+> 函数声明也是如此，严格模式下，函数只能声明在当前作用域的顶层。
 
 ```js
 // 不报错
