--- a/javascript/ES6/09.对象的扩展.md
+++ b/javascript/ES6/09.对象的扩展.md
@@ -140,7 +140,7 @@ console.log({user, foo})
 
 上面代码中，`console.log`直接输出`user`和`foo`两个对象时，就是两组键值对，可能会混淆。把它们放在大括号里面输出，就变成了对象的简洁表示法，每组键值对前面会打印对象名，这样就比较清晰了。
 
-注意，简写的对象方法不能用作构造函数，会报错。
+> 注意，简写的对象方法不能用作构造函数，会报错。
 
 ```javascript
 const obj = {
@@ -215,7 +215,7 @@ let obj = {
 obj.hello() // hi
 ```
 
-注意，属性名表达式与简洁表示法，不能同时使用，会报错。
+> 注意，属性名表达式与简洁表示法，不能同时使用，会报错。
 
 ```javascript
 // 报错
@@ -228,7 +228,7 @@ const foo = 'bar';
 const baz = { [foo]: 'abc'};
 ```
 
-注意，属性名表达式如果是一个对象，默认情况下会自动将对象转为字符串`[object Object]`，这一点要特别小心。
+> **注意，属性名表达式如果是一个对象，默认情况下会自动将对象转为字符串`[object Object]`，这一点要特别小心。**
 
 ```javascript
 const keyA = {a: 1};
@@ -409,7 +409,7 @@ obj.find() // "hello"
 
 上面代码中，对象`obj.find()`方法之中，通过`super.foo`引用了原型对象`proto`的`foo`属性。
 
-注意，`super`关键字表示原型对象时，只能用在对象的方法之中，用在其他地方都会报错。
+> **注意，`super`关键字表示原型对象时，只能用在对象的方法之中，用在其他地方都会报错。**
 
 ```javascript
 // 报错
@@ -473,14 +473,14 @@ z // { a: 3, b: 4 }
 
 上面代码中，变量`z`是解构赋值所在的对象。它获取等号右边的所有尚未读取的键（`a`和`b`），将它们连同值一起拷贝过来。
 
-由于解构赋值要求等号右边是一个对象，所以如果等号右边是`undefined`或`null`，就会报错，因为它们无法转为对象。
+> 由于解构赋值要求等号右边是一个对象，所以如果等号右边是`undefined`或`null`，就会报错，因为它们无法转为对象。
 
 ```javascript
 let { ...z } = null; // 运行时错误
 let { ...z } = undefined; // 运行时错误
 ```
 
-解构赋值必须是最后一个参数，否则会报错。
+> 解构赋值必须是最后一个参数，否则会报错。
 
 ```javascript
 let { ...x, y, z } = someObject; // 句法错误
@@ -489,7 +489,7 @@ let { x, ...y, ...z } = someObject; // 句法错误
 
 上面代码中，解构赋值不是最后一个参数，所以会报错。
 
-注意，解构赋值的拷贝是浅拷贝，即如果一个键的值是复合类型的值（数组、对象、函数）、那么解构赋值拷贝的是这个值的引用，而不是这个值的副本。
+> 注意，解构赋值的拷贝是浅拷贝，即如果一个键的值是复合类型的值（数组、对象、函数）、那么解构赋值拷贝的是这个值的引用，而不是这个值的副本。
 
 ```javascript
 let obj = { a: { b: 1 } };
@@ -500,7 +500,7 @@ x.a.b // 2
 
 上面代码中，`x`是解构赋值所在的对象，拷贝了对象`obj`的`a`属性。`a`属性引用了一个对象，修改这个对象的值，会影响到解构赋值对它的引用。
 
-另外，扩展运算符的解构赋值，不能复制继承自原型对象的属性。
+> 另外，扩展运算符的解构赋值，不能复制继承自原型对象的属性。
 
 ```javascript
 let o1 = { a: 1 };
