--- a/javascript/ES6/02.变量的解构赋值.md
+++ b/javascript/ES6/02.变量的解构赋值.md
@@ -45,7 +45,7 @@ y // undefined
 z // []
 ```
 
-如果解构不成功，变量的值就等于`undefined`。
+> 如果解构不成功，变量的值就等于`undefined`。
 
 ```js
 let [foo] = [];
@@ -54,7 +54,7 @@ let [bar, foo] = [1];
 
 以上两种情况都属于解构不成功，`foo`的值都会等于`undefined`。
 
-另一种情况是不完全解构，即等号左边的模式，只匹配一部分的等号右边的数组。这种情况下，解构依然可以成功。
+> 另一种情况是不完全解构，即等号左边的模式，只匹配一部分的等号右边的数组。这种情况下，解构依然可以成功。
 
 ```js
 let [x, y] = [1, 2, 3];
@@ -69,7 +69,7 @@ d // 4
 
 上面两个例子，都属于不完全解构，但是可以成功。
 
-如果等号的右边不是数组（或者严格地说，不是可遍历的结构，参见《Iterator》一章），那么将会报错。
+> 如果等号的右边不是数组，那么将会报错。
 
 ```js
 // 报错
@@ -83,7 +83,7 @@ let [foo] = {};
 
 上面的语句都会报错，因为等号右边的值，要么转为对象以后不具备 Iterator 接口（前五个表达式），要么本身就不具备 Iterator 接口（最后一个表达式）。
 
-对于 Set 结构，也可以使用数组的解构赋值。
+> 对于 Set 结构，也可以使用数组的解构赋值。
 
 ```js
 let [x, y, z] = new Set(['a', 'b', 'c']);
@@ -120,7 +120,7 @@ let [x, y = 'b'] = ['a']; // x='a', y='b'
 let [x, y = 'b'] = ['a', undefined]; // x='a', y='b'
 ```
 
-**注意，ES6 内部使用严格相等运算符（`===`），判断一个位置是否有值。所以，只有当一个数组成员严格等于`undefined`，默认值才会生效**。
+> **注意，ES6 内部使用严格相等运算符（`===`），判断一个位置是否有值。所以，只有当一个数组成员严格等于`undefined`，默认值才会生效**。
 
 ```js
 let [x = 1] = [undefined];
@@ -132,7 +132,7 @@ x // null
 
 上面代码中，如果一个数组成员是`null`，默认值就不会生效，因为`null`不严格等于`undefined`。
 
-如果默认值是一个表达式，那么这个表达式是惰性求值的，即只有在用到的时候，才会求值。
+> 如果默认值是一个表达式，那么这个表达式是惰性求值的，即只有在用到的时候，才会求值。
 
 ```js
 function f() {
@@ -153,7 +153,7 @@ if ([1][0] === undefined) {
 }
 ```
 
-默认值可以引用解构赋值的其他变量，但该变量必须已经声明。
+> 默认值可以引用解构赋值的其他变量，但该变量必须已经声明。
 
 ```js
 let [x = 1, y = x] = [];     // x=1; y=1
@@ -189,7 +189,7 @@ baz // undefined
 
 上面代码的第一个例子，等号左边的两个变量的次序，与等号右边两个同名属性的次序不一致，但是对取值完全没有影响。第二个例子的变量没有对应的同名属性，导致取不到值，最后等于`undefined`。
 
-如果解构失败，变量的值等于`undefined`。
+> 如果解构失败，变量的值等于`undefined`。
 
 ```js
 let {foo} = {bar: 'baz'};
@@ -198,7 +198,7 @@ foo // undefined
 
 上面代码中，等号右边的对象没有`foo`属性，所以变量`foo`取不到值，所以等于`undefined`。
 
-对象的解构赋值，可以很方便地将现有对象的方法，赋值到某个变量。
+> 对象的解构赋值，可以很方便地将现有对象的方法，赋值到某个变量。
 
 ```js
 // 例一
@@ -211,7 +211,7 @@ log('hello') // hello
 
 上面代码的例一将`Math`对象的对数、正弦、余弦三个方法，赋值到对应的变量上，使用起来就会方便很多。例二将`console.log`赋值到`log`变量。
 
-如果变量名与属性名不一致，必须写成下面这样。
+> 如果变量名与属性名不一致，必须写成下面这样。
 
 ```js
 let { foo: baz } = { foo: 'aaa', bar: 'bbb' };
@@ -311,7 +311,7 @@ let {foo: {bar}} = {baz: 'baz'};
 
 上面代码中，等号左边对象的`foo`属性，对应一个子对象。该子对象的`bar`属性，解构时会报错。原因很简单，因为`foo`这时等于`undefined`，再取子属性就会报错。
 
-注意，对象的解构赋值可以取到继承的属性。
+> 注意，对象的解构赋值可以取到继承的属性。
 
 ```js
 const obj1 = {};
@@ -346,7 +346,7 @@ var { message: msg = 'Something went wrong' } = {};
 msg // "Something went wrong"
 ```
 
-默认值生效的条件是，对象的属性值严格等于`undefined`。
+> 默认值生效的条件是，对象的属性值严格等于`undefined`。
 
 ```js
 var {x = 3} = {x: undefined};
@@ -434,7 +434,7 @@ s === Boolean.prototype.toString // true
 
 上面代码中，数值和布尔值的包装对象都有`toString`属性，因此变量`s`都能取到值。
 
-**解构赋值的规则是，只要等号右边的值不是对象或数组，就先将其转为对象。由于`undefined`和`null`无法转为对象，所以对它们进行解构赋值，都会报错**。
+> **解构赋值的规则是，只要等号右边的值不是对象或数组，就先将其转为对象。由于`undefined`和`null`无法转为对象，所以对它们进行解构赋值，都会报错**。
 
 ```js
 let { prop: x } = undefined; // TypeError
