--- a/小程序/小程序配置.md
+++ b/小程序/小程序配置.md
@@ -1067,3 +1067,76 @@ App({
 ### 8.4页面跳转
 
 navigator组件进行页面跳转操作。
+
+
+
+
+
+### 8.5获取授权信息
+
+> 1.首次授权
+
+```html
+ <button  bindgetuserinfo='handleGetUserInfo' open-type="getUserInfo">获取用户信息</button>
+```
+
+
+
+```js
+Page({
+  data: {
+    msg: '初始化测试数据',
+    userInfo: {}, // 用户的基本信息
+  },
+  // 获取用户信息的回调
+  handleGetUserInfo(res){
+    console.log(res)
+    if(res.detail.userInfo){// 允许
+      // 修改userInfo的状态数据
+      this.setData({
+        userInfo: res.detail.userInfo
+      })
+    }
+  }
+})
+```
+
+
+
+> 2.再次进去小程序
+
+```js
+Page({
+  data: {
+    msg: '初始化测试数据',
+    userInfo: {}, // 用户的基本信息
+  },
+  // 获取用户信息的回调
+  handleGetUserInfo(res){
+    console.log(res)
+    if(res.detail.userInfo){// 允许
+      // 修改userInfo的状态数据
+      this.setData({
+        userInfo: res.detail.userInfo
+      })
+    }
+  },
+  onLoad: function (options) {
+    // 授权以后获取用户信息
+    wx.getUserInfo({
+      success: (res) => {
+        console.log(res);
+        this.setData({
+          userInfo: res.userInfo
+        })
+      },
+      fail: (err) => {
+        console.log(err);
+      }
+    })
+  },
+})  
+
+
+```
+
