--- a/面试/前端基础拾遗90问.md
+++ b/面试/前端基础拾遗90问.md
@@ -8,7 +8,7 @@
 
 ![img](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/1714616e2fd53bf8.jpeg)
 
-babel在`let`定义的变量前加了道下划线，避免在块级作用域外访问到该变量，除了对变量名的转换，我们也可以**通过自执行函数来模拟块级作用域**。
+babel在`let`定义的变量前加了道下划线，避免在块级作用域外访问到该变量，除了对变量名的转换，我们也可以通过自执行函数来模拟块级作用域。
 
 ```js
 (function(){
@@ -189,9 +189,9 @@ foo.myBind(obj, 'a', 'b', 'c')()    //输出写代码像蔡徐抻 ['a', 'b', 'c'
 
 ## 6. 手写一个防抖函数
 
-**防抖：即短时间内大量触发同一事件，只会执行一次函数。**
+防抖：即短时间内大量触发同一事件，只会执行一次函数。
 
-实现原理：设置一个定时器，约定在xx毫秒后再触发事件处理，每次触发事件都会重新设置计时器，直到xx毫秒内无第二次操作。
+> 实现原理：设置一个定时器，约定在xx毫秒后再触发事件处理，每次触发事件都会重新设置计时器，直到xx毫秒内无第二次操作。
 
 防抖常用于搜索框/滚动条的监听事件处理，如果不做防抖，每输入一个字/滚动屏幕，都会触发事件处理，造成性能浪费。
 
@@ -213,7 +213,7 @@ function debounce(func, wait) {
 
 防抖是`延迟执行`，而节流是`间隔执行`，函数节流即`每隔一段时间就执行一次`。
 
-实现原理：设置一个定时器，约定xx毫秒后执行事件，如果时间到了，那么执行函数并重置定时器。
+> 实现原理：设置一个定时器，约定xx毫秒后执行事件，如果时间到了，那么执行函数并重置定时器。
 
 区别：防抖每次触发事件都重置定时器，而节流在定时器到时间后再清空定时器
 
