--- a/javascript/基础/03.运算符.md
+++ b/javascript/基础/03.运算符.md
@@ -1,5 +1,3 @@
-# 运算符
-
 ## 1.算术运算符
 
 ### 1.1概述
@@ -38,20 +36,20 @@ true + true // 2
 
 第一行是两个布尔值相加，第二行是数值与布尔值相加。这两种情况，**布尔值都会自动转成数值，然后再相加**。
 
-比较特殊的是，**如果是两个字符串相加，这时加法运算符会变成连接运算符，返回一个新的字符串，将两个原字符串连接在一起**。
+> **如果是两个字符串相加，这时加法运算符会变成连接运算符，返回一个新的字符串，将两个原字符串连接在一起**。
 
 ```js
 'a' + 'bc' // "abc"
 ```
 
-如果一个运算子是==字符串==，另一个运算子是==非字符串==，这时==非字符串会转成字符串==，再连接在一起。
+> 如果一个运算子是字符串，另一个运算子是非字符串，这时非字符串会转成字符串，再连接在一起。
 
 ```js
 1 + 'a' // "1a"
 false + 'a' // "falsea"
 ```
 
-==加法运算符是在运行时决定，到底是执行相加，还是执行连接==。也就是说，运算子的不同，导致了不同的语法行为，这种现象称为==重载==（overload）。由于加法运算符存在重载，可能执行两种运算，使用的时候必须很小心。
+> 加法运算符是在运行时决定，到底是执行相加，还是执行连接。也就是说，运算子的不同，导致了不同的语法行为，这种现象称为重载（overload）。由于加法运算符存在重载，可能执行两种运算，使用的时候必须很小心。
 
 ```js
 '3' + 4 + 5 // "345"
@@ -61,7 +59,9 @@ false + 'a' // "falsea"
 
 上面代码中，由于从左到右的运算次序，字符串的位置不同会导致不同的结果。
 
-==除了加法运算符，其他算术运算符（比如减法、除法和乘法）都不会发生重载==。它们的规则是：**所有运算子一律转为数值，再进行相应的数学运算**。
+> 除了加法运算符，其他算术运算符（比如减法、除法和乘法）都不会发生重载。
+
+它们的规则是：**所有运算子一律转为数值，再进行相应的数学运算**。
 
 ```js
 1 - '2' // -1
@@ -73,14 +73,14 @@ false + 'a' // "falsea"
 
 #### 1.2.2对象的相加
 
-==如果运算子是对象，必须先转成原始类型的值，然后再相加==。
+> 如果运算子是对象，必须先转成原始类型的值，然后再相加。
 
 ```js
 var obj = { p: 1 };
 obj + 2 // "[object Object]2"
 ```
 
-上面代码中，对象`obj`转成原始类型的值是`[object Object]`，再加`2`就得到了上面的结果。==对象转成原始类型的值==，规则如下：
+上面代码中，对象`obj`转成原始类型的值是`[object Object]`，再加`2`就得到了上面的结果。对象转成原始类型的值，规则如下：
 
 首先，自动调用对象的`valueOf`方法。
 
@@ -146,7 +146,7 @@ obj + 2 // "hello2"
 12 % 5 // 2
 ```
 
-需要注意的是，运算结果的正负号由第一个运算子的正负号决定。
+> 需要注意的是，运算结果的正负号由第一个运算子的正负号决定。
 
 ```js
 -1 % 2 // -1
@@ -180,7 +180,9 @@ isOdd(-4) // false
 
 ### 1.4自增和自减运算符
 
-自增和自减运算符，是一元运算符，只需要一个运算子。它们的作用是将运算子==首先转为数值，然后加上1或者减去1==。==它们会修改原始变量==。
+自增和自减运算符，是一元运算符，只需要一个运算子。
+
+> 它们的作用是：将运算子首先转为数值，然后加上1或者减去1。它们会修改原始变量。
 
 ```js
 var x = 1;
@@ -193,9 +195,9 @@ x // 1
 
 上面代码的变量`x`自增后，返回`2`，再进行自减，返回`1`。这两种情况都会使得，原始变量`x`的值发生改变。
 
-运算之后，变量的值发生变化，这种效应叫做运算的副作用（side effect）。自增和自减运算符是仅有的两个具有副作用的运算符，其他运算符都不会改变变量的值。
+> 运算之后，变量的值发生变化，这种效应叫做运算的副作用（side effect）。自增和自减运算符是仅有的两个具有副作用的运算符，其他运算符都不会改变变量的值。
 
-自增和自减运算符有一个需要注意的地方：==放在变量之后==，会先返回变量操作前的值，再进行自增/自减操作；==放在变量之前==，会先进行自增/自减操作，再返回变量操作后的值。
+自增和自减运算符有一个需要注意的地方：放在变量之后，会先返回变量操作前的值，再进行自增/自减操作；放在变量之前，会先进行自增/自减操作，再返回变量操作后的值。
 
 ```js
 var x = 1;
@@ -211,7 +213,7 @@ x++ // 1
 
 数值运算符（`+`）同样使用加号，但它是一元运算符（只需要一个操作数），而加法运算符是二元运算符（需要两个操作数）。
 
-==数值运算符的作用在于可以将任何值转为数值==（与`Number`函数的作用相同）
+> 数值运算符的作用在于可以将任何值转为数值（与`Number`函数的作用相同）
 
 ```js
 +true // 1
@@ -221,7 +223,7 @@ x++ // 1
 
 上面代码表示，非数值经过数值运算符以后，都变成了数值（最后一行`NaN`也是数值）
 
-负数值运算符（`-`），也同样具有==将一个值转为数值的功能，只不过得到的值正负相反==。连用两个负数值运算符，等同于数值运算符。
+> 负数值运算符（`-`），也同样具有将一个值转为数值的功能，只不过得到的值正负相反。连用两个负数值运算符，等同于数值运算符。
 
 ```js
 var x = 1;
@@ -231,7 +233,7 @@ var x = 1;
 
 **上面代码最后一行的圆括号不可少，否则会变成自减运算符**。
 
-==数值运算符号和负数值运算符，都会返回一个新的值，而不会改变原始变量的值==。
+> 数值运算符号和负数值运算符，都会返回一个新的值，而不会改变原始变量的值。
 
 ### 1.6指数运算符
 
@@ -241,7 +243,7 @@ var x = 1;
 2 ** 4 // 16
 ```
 
-注意：指数运算符是右结合，而不是左结合。即多个指数运算符连用时，先进行最右边的计算。
+> 注意：指数运算符是右结合，而不是左结合。即多个指数运算符连用时，先进行最右边的计算。
 
 ```js
 // 相当于 2 ** (3 ** 2)
@@ -263,7 +265,7 @@ var x = 1;
 var x = y;
 ```
 
-值运算符还可以与其他运算符结合，形成变体。下面是与算术运算符的结合。
+赋值运算符还可以与其他运算符结合，形成变体。下面是与算术运算符的结合。
 
 ```js
 // 等同于 x = x + y
@@ -307,17 +309,17 @@ x |= y
 x ^= y
 ```
 
-## 2比较运算符
+## 2.比较运算符
 
 ### 2.1概述
 
-比较运算符用于比较两个值的大小，然后==返回一个布尔值==，表示是否满足指定的条件。
+> 比较运算符用于比较两个值的大小，然后返回一个布尔值，表示是否满足指定的条件。
 
 ```js
 2 > 1 // true
 ```
 
-> 注意，比较运算符可以比较各种类型的值，不仅仅是数值。
+> 注意：比较运算符可以比较各种类型的值，不仅仅是数值。
 
 JavaScript 一共提供了8个比较运算符。
 
@@ -330,7 +332,7 @@ JavaScript 一共提供了8个比较运算符。
 - `!=` 不相等运算符
 - `!==` 严格不相等运算符
 
-这八个比较运算符分成两类：相等比较和非相等比较。两者的规则是不一样的，对于非相等的比较，算法是先看两个运算子是否都是==字符串==，如果是的，就==按照字典顺序比较==（实际上是比较 Unicode 码点）；==否则，将两个运算子都转成数值，再比较数值的大小==。
+> 这八个比较运算符分成两类：相等比较和非相等比较。两者的规则是不一样的，对于非相等的比较，算法是先看两个运算子是否都是字符串，如果是的，就按照字典顺序比较（实际上是比较 Unicode 码点）；否则，将两个运算子都转成数值，再比较数值的大小。
 
 ### 2.2非相等运算符：字符串的比较
 
@@ -361,7 +363,7 @@ JavaScript 引擎内部首先比较首字符的 Unicode 码点。如果相等，
 
 #### 2.3.1原始类型值
 
-==如果两个运算子都是原始类型的值，则是先转成数值再比较==。
+> 如果两个运算子都是原始类型的值，则是先转成数值再比较。
 
 ```js
 5 > '4' // true
@@ -379,7 +381,7 @@ true > false // true
 
 上面代码中，字符串和布尔值都会先转成数值，再进行比较。
 
-这里需要注意与`NaN`的比较。任何值（包括`NaN`本身）与`NaN`比较，返回的都是`false`。
+> 这里需要注意与`NaN`的比较。任何值（包括`NaN`本身）与`NaN`比较，返回的都是`false`。
 
 ```js
 1 > NaN // false
@@ -392,7 +394,7 @@ NaN <= NaN // false
 
 #### 2.3.2对象
 
-==如果运算子是对象，会转为原始类型的值，再进行比较==。
+> 如果运算子是对象，会转为原始类型的值，再进行比较。
 
 对象转换成原始类型的值，算法是先调用`valueOf`方法；如果返回的还是对象，再接着调用`toString`方法
 
@@ -428,7 +430,7 @@ x > '11' // false
 
 JavaScript 提供两种相等运算符：`==`和`===`。
 
-简单说，它们的区别是相等运算符（`==`）比较两个值是否相等，严格相等运算符（`===`）比较它们是否为“同一个值”。如果两个值不是同一类型，严格相等运算符（`===`）直接返回`false`，而相等运算符（`==`）会将它们转换成同一个类型，再用严格相等运算符进行比较。
+> 区别：相等运算符（`==`）比较两个值是否相等，严格相等运算符（`===`）比较它们是否为“同一个值”。如果两个值不是同一类型，严格相等运算符（`===`）直接返回`false`，而相等运算符（`==`）会将它们转换成同一个类型，再用严格相等运算符进行比较。
 
 #### 2.4.1不同类型的值
 
@@ -439,7 +441,7 @@ JavaScript 提供两种相等运算符：`==`和`===`。
 true === "true" // false
 ```
 
-上面代码比较数值的`1`与字符串的“1”、布尔值的`true`与字符串`"true"`，因为类型不同，结果都是`false`。
+上面代码比较数值的`1`与字符串的`“1”`、布尔值的`true`与字符串`"true"`，因为类型不同，结果都是`false`。
 
 #### 2.4.2同一类的原始类型值
 
@@ -451,7 +453,7 @@ true === "true" // false
 
 上面代码比较十进制的`1`与十六进制的`1`，因为类型和值都相同，返回`true`。
 
-需要注意的是，`NaN`与任何值都不相等（包括自身）。另外，正`0`等于负`0`。
+> 需要注意的是，`NaN`与任何值都不相等（包括自身）。另外，正`0`等于负`0`。
 
 ```js
 NaN === NaN  // false
@@ -460,7 +462,7 @@ NaN === NaN  // false
 
 #### 2.4.3复合类型值
 
-两个复合类型（对象、数组、函数）的数据比较时，不是比较它们的值是否相等，而是==比较它们是否指向同一个地址==。
+> 两个复合类型（对象、数组、函数）的数据比较时，不是比较它们的值是否相等，而是==比较它们是否指向同一个地址==。
 
 ```js
 {} === {} // false
@@ -470,7 +472,7 @@ NaN === NaN  // false
 
 上面代码分别比较两个空对象、两个空数组、两个空函数，结果都是不相等。原因是对于复合类型的值，严格相等运算比较的是，它们是否引用同一个内存地址，而运算符两边的空对象、空数组、空函数的值，都存放在不同的内存地址，结果当然是`false`。
 
-如果两个变量引用同一个对象，则它们相等。
+> 如果两个变量引用同一个对象，则它们相等。
 
 ```js
 var v1 = {};
@@ -478,7 +480,7 @@ var v2 = v1;
 v1 === v2 // true
 ```
 
-==注意==，对于两个对象的比较，严格相等运算符比较的是地址，而大于或小于运算符比较的是值。
+> 注意：对于两个对象的比较，严格相等运算符比较的是地址，而大于或小于运算符比较的是值。
 
 ```js
 var obj1 = {};
@@ -499,7 +501,7 @@ undefined === undefined // true
 null === null // true
 ```
 
-由于变量声明后默认值是`undefined`，因此两个只声明未赋值的变量是相等的。
+> 由于变量声明后默认值是`undefined`，因此两个只声明未赋值的变量是相等的。
 
 ```js
 var v1;
@@ -509,7 +511,9 @@ v1 === v2 // true
 
 ### 2.5严格不相等运算符
 
-严格相等运算符有一个对应的“严格不相等运算符”（`!==`），它的算法就是先求严格相等运算符的结果，然后返回相反值。
+严格相等运算符有一个对应的“严格不相等运算符”（`!==`）。
+
+> 它的算法就是先求严格相等运算符的结果，然后返回相反值。
 
 ```js
 1 !== '1' // true
@@ -532,7 +536,7 @@ v1 === v2 // true
 
 #### 2.6.1原始类型值
 
-==原始类型的值会转换成数值再进行比较==。
+> 原始类型的值会转换成数值再进行比较。
 
 ```js
 1 == true // true
@@ -571,7 +575,7 @@ v1 === v2 // true
 
 #### 2.6.2对象与原始类型值比较
 
-对象（这里指广义的对象，包括数组和函数）与原始类型的值比较时，==对象转换成原始类型的值，再进行比较==。
+对象（这里指广义的对象，包括数组和函数）与原始类型的值比较时：==对象转换成原始类型的值，再进行比较==。
 
 ```js
 // 对象与数值比较时，对象转为数值
@@ -632,7 +636,7 @@ null == undefined   // true
 
 ### 2.7不相等运算符
 
-相等运算符有一个对应的“不相等运算符”（`!=`），它的算法就是先求相等运算符的结果，然后返回相反值。
+相等运算符有一个对应的“不相等运算符”（`!=`），它的算法就是：先求相等运算符的结果，然后返回相反值。
 
 ```js
 1 != '1' // false
@@ -645,7 +649,7 @@ null == undefined   // true
 
 ### 3.1概述
 
-布尔运算符用于==将表达式转为布尔值==，一共包含四个运算符。
+布尔运算符用于将表达式转为布尔值，一共包含四个运算符。
 
 - 取反运算符：`!`
 - 且运算符：`&&`
@@ -654,14 +658,14 @@ null == undefined   // true
 
 ### 3.2取反运算符（!）
 
-取反运算符是一个感叹号，==用于将布尔值变为相反值==，即`true`变成`false`，`false`变成`true`。
+取反运算符是一个感叹号，用于将布尔值变为相反值，即`true`变成`false`，`false`变成`true`。
 
 ```js
 !true // false
 !false // true
 ```
 
-==对于非布尔值，取反运算符会将其转为布尔值==。可以这样记忆，以下六个值取反后为`true`，其他值都为`false`。
+对于非布尔值，取反运算符会将其转为布尔值。可以这样记忆，以下六个值取反后为`true`，其他值都为`false`。
 
 - `undefined`
 - `null`
@@ -684,7 +688,7 @@ null == undefined   // true
 !{} // false
 ```
 
-**如果对一个值连续做两次取反运算，等于将其转为对应的布尔值**，与`Boolean`函数的作用相同。这是一种常用的类型转换的写法。
+> **如果对一个值连续做两次取反运算，等于将其转为对应的布尔值**，与`Boolean`函数的作用相同。这是一种常用的类型转换的写法。
 
 ```js
 !!x
@@ -698,7 +702,7 @@ Boolean(x)
 
 且运算符（`&&`）往往用于多个表达式的求值。
 
-它的==运算规则==是：如果第一个运算子的布尔值为`true`，则返回第二个运算子的值（==注意是值，不是布尔值==）；如果第一个运算子的布尔值为`false`，则直接返回第一个运算子的值，**且不再对第二个运算子求值**。
+> 它的运算规则是：如果第一个运算子的布尔值为`true`，则返回第二个运算子的值（==注意是值，不是布尔值==）；如果第一个运算子的布尔值为`false`，则直接返回第一个运算子的值，**且不再对第二个运算子求值**。
 
 ```js
 't' && '' // ""
@@ -713,7 +717,7 @@ x // 1
 //由于且运算符的第一个运算子的布尔值为false，则直接返回它的值0，而不再对第二个运算子求值，所以变量x的值没变。
 ```
 
-这种跳过第二个运算子的机制，被称为==短路==。有些程序员喜欢用它取代`if`结构，比如下面是一段`if`结构的代码，就可以用且运算符改写。
+这种跳过第二个运算子的机制，被称为**短路**。有些程序员喜欢用它取代`if`结构，比如下面是一段`if`结构的代码，就可以用且运算符改写。
 
 ```js
 if (i) {
@@ -726,7 +730,7 @@ i && doSomething();
 
 上面代码的两种写法是等价的，但是后一种不容易看出目的，也不容易除错，建议谨慎使用。
 
-**且运算符可以多个连用，这时返回第一个布尔值为`false`的表达式的值**。如果所有表达式的布尔值都为`true`，则返回最后一个表达式的值。
+> **且运算符可以多个连用，这时返回第一个布尔值为`false`的表达式的值**。如果所有表达式的布尔值都为`true`，则返回最后一个表达式的值。
 
 ```js
 true && 'foo' && '' && 4 && 'foo' && true
@@ -740,7 +744,7 @@ true && 'foo' && '' && 4 && 'foo' && true
 
 或运算符（`||`）也用于多个表达式的求值。
 
-它的==运算规则==是：如果第一个运算子的布尔值为`true`，则返回第一个运算子的值，且不再对第二个运算子求值；如果第一个运算子的布尔值为`false`，则返回第二个运算子的值。
+> 它的运算规则是：如果第一个运算子的布尔值为`true`，则返回第一个运算子的值，且不再对第二个运算子求值；如果第一个运算子的布尔值为`false`，则返回第二个运算子的值。
 
 ```js
 't' || '' // "t"
@@ -759,7 +763,7 @@ x // 1
 
 上面代码中，或运算符的第一个运算子为`true`，所以直接返回`true`，不再运行第二个运算子。所以，`x`的值没有改变。这种只通过第一个表达式的值，控制是否运行第二个表达式的机制，就称为==短路==（short-cut）。
 
-**或运算符可以多个连用，这时返回第一个布尔值为`true`的表达式的值**。如果所有表达式都为`false`，则返回最后一个表达式的值。
+> **或运算符可以多个连用，这时返回第一个布尔值为`true`的表达式的值**。如果所有表达式都为`false`，则返回最后一个表达式的值。
 
 ```js
 false || 0 || '' || 4 || 'foo' || true
@@ -794,7 +798,7 @@ saveText(this.text || '')
 
 上面代码的`t`和`0`的布尔值分别为`true`和`false`，所以分别返回第二个和第三个表达式的值。
 
-通常来说，三元条件表达式与`if...else`语句具有同样表达效果，前者可以表达的，后者也能表达。但是两者具有一个重大差别，**`if...else`是语句，没有返回值**；**三元条件表达式是表达式，具有返回值**。所以，在需要返回值的场合，只能使用三元条件表达式，而不能使用`if..else`。
+通常来说，三元条件表达式与`if...else`语句具有同样表达效果，前者可以表达的，后者也能表达。但是两者具有一个重大差别，==`if...else`是语句，没有返回值；**三元条件表达式是表达式，具有返回值**==。所以，在需要返回值的场合，只能使用三元条件表达式，而不能使用`if..else`。
 
 ```js
 console.log(true ? 'T' : 'F');
@@ -1190,7 +1194,7 @@ function f() {
 
 ### 5.2逗号运算符
 
-逗号运算符用于对两个表达式求值，并==返回后一个表达式的值==。
+逗号运算符用于对两个表达式求值，并返回后一个表达式的值。
 
 ```js
 'a', 'b' // "b"
