--- a/小程序/小程序配置.md
+++ b/小程序/小程序配置.md
@@ -2,17 +2,30 @@
 
 ### 1.1全局配置app.json
 
+`app.json` 是当前小程序的全局配置，包括了小程序的所有页面路径、界面表现、网络超时时间、底部 tab 等。
+
+```json
+{
+  "pages":[
+    "pages/index/index",
+    "pages/logs/logs"
+  ],
+  "window":{
+    "backgroundTextStyle":"light",
+    "navigationBarBackgroundColor": "#fff",
+    "navigationBarTitleText": "Weixin",
+    "navigationBarTextStyle":"black"
+  }
+}
+```
+
+### 1.2页面配置 page.json
+
+
+
 ## 2.小程序基本语法
 
-### 2.1逻辑层
-
-
-
-### 2.2视图层
-
-#### 2.2.1WXML
-
-- 数据绑定
+### 2.1数据绑定
 
 ```html
 <!--wxml-->
@@ -28,7 +41,47 @@ Page({
 })
 ```
 
-- 列表渲染
+属性值也可以动态的去改变，有所不同的是，属性值必须被包裹在双引号中。
+
+```html
+<!-- 正确的写法 -->
+<text data-test="{{test}}"> hello world</text>
+
+
+<!-- 错误的写法  -->
+<text data-test={{test}}> hello world </text >
+```
+
+需要注意的是变量名是大小写敏感的，也就是说 {{name}} 和 {{Name}} 是两个不同的变量。
+
+还需要注意，没有被定义的变量的或者是被设置为 undefined 的变量不会被同步到 wxml 中。
+
+```html
+<!--
+{
+  var2: undefined,
+  var3: null,
+  var4: "var4"
+}
+-->
+
+
+<view>{{var1}}</view>
+<view>{{var2}}</view>
+<view>{{var3}}</view>
+<view>{{var4}}</view>
+
+
+<!--
+输出：
+null
+var4
+-->
+```
+
+
+
+### 2.2列表渲染
 
 ```html
 <!--wxml-->
