--- a/CSS/02.CSS3.md
+++ b/CSS/02.CSS3.md
@@ -1,7 +1,7 @@
 ## 1.过渡
 
 众所周知，css效率极高，其变化的过程往往都是在一瞬间完成，速度极快。
-CSS `transition` 提供了一种在更改CSS属性时控制动画速度的方法。 其可以让属性变化成为一个持续一段时间的过程，而不是立即生效的。比如，将一个元素的颜色从白色改为黑色，通常这个改变是立即生效的，使用 CSS `transitions` 后该元素的颜色将逐渐从白色变为黑色，按照一定的==曲线速率变化==。
+CSS `transition` 提供了一种在更改CSS属性时控制动画速度的方法。 其可以让属性变化成为一个持续一段时间的过程，而不是立即生效的。比如，将一个元素的颜色从白色改为黑色，通常这个改变是立即生效的，使用 CSS `transitions` 后该元素的颜色将逐渐从白色变为黑色，按照一定的曲线速率变化。
 
 ```css
 .box {
@@ -9,8 +9,8 @@ CSS `transition` 提供了一种在更改CSS属性时控制动画速度的方法
 }
 ```
 
--  注意:
-   在`transition`属性中，各个值的书写顺序是很重要的：第一个可以解析为==时间==的值会被赋值给`transition-duration`，第二个可以解析为==时间==的值会被赋值给`transition-delay`
+注意:
+在`transition`属性中，各个值的书写顺序是很重要的：第一个可以解析为时间的值会被赋值给`transition-duration`，第二个可以解析为时间的值会被赋值给`transition-delay`
 
 > **注意：谁做过渡给谁加**
 
@@ -40,16 +40,18 @@ div:hover {/*动画*/
 }
 ```
 
-可能取值：
+取值：
 
-- `all`:默认值，表示所有==可被动画的属性==都表现出过渡动画。
+- `all`:默认值，表示所有可被动画的属性都表现出过渡动画。
 - `none`:没有过渡动画。
 - 属性名:可以指定多个需要过渡的属性名
 
 示例：
 
 ```css
-transition-property: background,width,height;
+.div{
+  transition-property: background,width,height;
+}
 ```
 
 ### 1.2`transition-duration`
@@ -58,14 +60,14 @@ transition-property: background,width,height;
 
 ```css
 .div{
-  transition-duration: 0s(默认值) | 数值(必须带单位)
+  		transition-duration: 0s(默认值) | 数值(必须带单位)
 }
 ```
 
-可能取值：
+取值：
 
 - `0s`：默认值 ，表示不出现过渡动画，属性会瞬间完成转变。不接受负值。
-- 属性值:以毫秒或秒为单位的数值，必须带单位。
+- 数值:以毫秒或秒为单位的数值，必须带单位。
 
 > 多个值情况：
 
@@ -89,7 +91,7 @@ transition-property: background,width,height;
 }
 ```
 
-可能取值：
+取值：
 
 - `ease`:默认值，加速然后减速。ease函数等同于贝塞尔曲线(0.25, 0.1, 0.25, 1.0)。
 - `linear`:匀速。linear 函数等同于贝塞尔曲线(0.0, 0.0, 1.0, 1.0)。
@@ -272,29 +274,22 @@ css:
 }
 ```
 
-
-
-## 1.    2D变形
+## 2.2D变形
 
 - `transform `属性允许你修改CSS视觉格式模型的坐标空间
 - `transform` 属性 , 只对 `block` 级元素生效！
 - `2D` 转换是改变标签在二维平面上的位置和形状
 - 可选值
-  - `rotate`(角度)旋转
-  - `translate`      平移
-  - `skew`          倾斜 
-  - `scale`        缩放
-  - `transform-origin`
+  - `rotate`：(角度)旋转
+  - `translate`：平移
+  - `skew`：倾斜 
+  - `scale`：缩放
+  - `transform-origin`：
 - `matrix`     矩阵
 
+### 2.1`translate`
 
-
-### 1.1`translate`
-
-#### 1.语法
-
-- x 就是 x 轴上水平移动
-- y 就是 y 轴上水平移动
+x 就是 x 轴上水平移动，y 就是 y 轴上水平移动。
 
 ```css
 transform: translate(x, y)
@@ -302,14 +297,15 @@ transform: translateX(n)
 transfrom: translateY(n)
 ```
 
-#### 2.重点知识点
+`2D` 的移动主要是指 水平、垂直方向上的移动。
 
-- `2D` 的移动主要是指 水平、垂直方向上的移动
-- `translate` 最大的优点就是不影响其他元素的位置，层级比其他高
-- `translate` 中的==百分比（%）==单位，是相对于==盒子自身==的宽度和高度来进行计算的
-- `translate`行内标签没有效果
+`translate` 最大的优点就是不影响其他元素的位置，层级比其他高。
 
-示例
+`translate` 中的百分比（%）单位，是相对于盒子自身的宽度和高度来进行计算的。
+
+`translate`行内标签没有效果。
+
+示例：
 
 ```css
 div {
@@ -333,8 +329,6 @@ div {
   transform: translateY(100px)
 }
 ```
-
-#### 3.案列
 
 1.让一个盒子水平垂直居中
 
@@ -374,21 +368,18 @@ span {
 }
 ```
 
-### 1.2`rotate`
+### 2.2`rotate`
 
-#### 1.rotate 旋转
+`2D` 旋转指的是让元素在二维平面内顺时针或者逆时针旋转。
 
-- `2D` 旋转指的是让元素在二维平面内顺时针或者逆时针旋转
-- 只能设单值。正数表示顺时针旋转，负数表示逆时针旋转
+只能设单值。正数表示顺时针旋转，负数表示逆时针旋转。
 
-#### 2.`rotate` 语法
+语法：
 
 ```css
 /* 单位是：deg */
 transform: rotate(度数) 
 ```
-
-#### 3.重点知识点
 
 - `rotate` 里面跟度数，单位是 `deg`
 - 角度为正时，顺时针，角度为负时，逆时针
@@ -402,18 +393,16 @@ img:hover {
 }
 ```
 
-#### 4.使用步骤
-
 - 给元素添加转换属性 `transform`
 - 属性值为 `rotate(角度)`  如 `transform:rotate(30deg)`  顺时针方向旋转**30度**
 
 ```css
 div{
-      transform: rotate(0deg);
+      transform: rotate(30deg);
 }
 ```
 
-5.案列
+案列：
 
 三角
 
@@ -442,20 +431,19 @@ div:hover::after {
 }
 ```
 
-#### 5.`transform-origin`旋转中心
+`transform-origin`旋转中心：
 
-- 语法
+语法：
 
 ```css
 transform-origin: x y;
 ```
 
-- 重要知识点
-  - 注意后面的参数 x 和 y 用空格隔开
-  - x y 默认旋转的中心点是元素的中心 (50% 50%)，等价于 `center`  `center`
-  - 还可以给 x y 设置像素或者方位名词(`top`、`bottom`、`left`、`right`、`center`)
+- 注意后面的参数 x 和 y 用空格隔开。
+- x y 默认旋转的中心点是元素的中心 (50% 50%)，等价于 `center`  `center`
+- 还可以给 x y 设置像素或者方位名词(`top`、`bottom`、`left`、`right`、`center`)
 
-- 案列
+案列：
 
 ```css
 /****************html******************/
@@ -485,19 +473,15 @@ div:hover::before {
 }
 ```
 
-### 1.3`scale`
+### 2.3`scale`
 
-#### 1.`scale` 的作用
+用来控制元素的放大与缩小。
 
-- 用来控制元素的放大与缩小
-
-#### 2.语法
+语法：
 
 ```css
 transform: scale(x, y)
 ```
-
-#### 3.知识要点
 
 - 注意，x 与 y 之间使用逗号进行分隔
 - `transform: scale(1, 1)`: 宽高都放大一倍，相当于没有放大
@@ -506,7 +490,7 @@ transform: scale(x, y)
 - `transform:scale(0.5, 0.5)`: 缩小
 - `scale` 最大的优势：可以设置转换中心点缩放，默认以中心点缩放，而且不影响其他盒子
 
-示例
+示例：
 
 ```css
 div:hover {
@@ -543,9 +527,9 @@ div:hover {
 }
 ```
 
-#### 4.案列
+案列：
 
-- 图片放大
+图片放大
 
 ```css
 /****************html********************/
@@ -572,7 +556,7 @@ div img:hover {
 }
 ```
 
-- 分页按钮
+分页按钮：
 
 ```css
 /**********html***********/
@@ -602,15 +586,13 @@ li:hover {
         }
 ```
 
-### 1.4`2D` 转换综合写法以及顺序问题
-
-#### 1.知识要点
+### 2.4`2D` 转换综合写法以及顺序问题
 
 - 同时使用多个转换，其格式为 `transform: translate() rotate() scale()`
 - 顺序会影响到转换的效果(先旋转会改变坐标轴方向)
 - 但我们同时有位置或者其他属性的时候，要将位移放到最前面
 
-#### 2.示例
+示例：
 
 ```css
 div:hover {
@@ -619,104 +601,37 @@ div:hover {
 }
 ```
 
-> 3. skew          倾斜 
+### 2.5skew
 
-- transform:skewX(45deg);
-  - X方向倾斜:transform:  skewX(angle)
-        skewX(45deg):参数值以deg为单位 代表与y轴之间的角度
-  - Y方向倾斜:transform:  skewY(angle)
-        skewY(45deg):参数值以deg为单位 代表与x轴之间的角度
-  - 二维倾斜:transform:  skew(ax[, ay]);  如果ay未提供，在Y轴上没有倾斜
-        skew(45deg,15deg):参数值以deg为单位 第一个参数代表与y轴之间的角度
-                                                                            第二个参数代表与x轴之间的角度
-         单值时表示只X轴扭曲，Y轴不变，如transform: skew(30deg);等价于 transform: skew(30deg, 0);
-         考虑到可读性，不推荐用单值，应该用transform: skewX(30deg);。skewY表示 只Y轴扭曲，X轴不变  
+transform:skewX(45deg);
+
+X方向倾斜:transform:  skewX(angle)
+skewX(45deg):参数值以deg为单位 代表与y轴之间的角度
+
+Y方向倾斜:transform:  skewY(angle)
+ skewY(45deg):参数值以deg为单位 代表与x轴之间的角度
+
+二维倾斜:transform:  skew(ax[, ay]);  如果ay未提供，在Y轴上没有倾斜
+skew(45deg,15deg):参数值以deg为单位 第一个参数代表与y轴之间的角度
+                                                                        第二个参数代表与x轴之间的角度
+单值时表示只X轴扭曲，Y轴不变，如transform: skew(30deg);等价于 transform: skew(30deg, 0);
+ 考虑到可读性，不推荐用单值，应该用transform: skewX(30deg);。skewY表示 只Y轴扭曲，X轴不变  
+
 - 正值:拉正斜杠方向的两个角
 
 - 负值:拉反斜杠方向的两个角
 
-> 4. scale        缩放
+## 3.3D变形
 
-- transform:scale(2);
-  - X方向缩放:transform:  scaleX(sx); 
+在浏览器中，X轴是从左到右，Y轴是从上到下，Z轴是从里到外。
 
-  - Y方向缩放:transform:  scaleY(sy);
-
-  - 二维缩放 :transform:  scale(sx[, sy]);  (如果sy 未指定，默认认为和sx的值相同)  
-- 要缩小请设0.01～0.99之间的值，要放大请设超过1的值。
-  例如缩小一倍可以transform: scale(.5);
-          放大一倍可以transform: scale(2);
-- 如果只想X轴缩放，可以用scaleX(.5)相当于scale(.5, 1)。
-- 同理只想Y轴缩放，可以用scaleY(.5)相当于scale(1, .5)
-- 正值:缩放的程度
-
-- 负值:不推荐使用（有旋转效果）
-
-- 单值时表示只X轴,Y轴上缩放粒度一样，如transform: scale(2);等价于transform: scale(2,2);
-
-> 5.基点的变换
-
-- transform-origin CSS属性让你更改一个元素变形的基点。
-
-示例：`transform-origin:100% 100%;`
-
-> 6. matrix     矩阵
-
-- 在 2D变换 中，矩阵变换函数 matrix() 接受 6个值，语法形式如下：
-      `transform: matrix(a, b, c, d, e, f); `       
-
-- 这相当于，对元素应用一个如下的变换矩阵：
-      ![1565537324149](D:%5C%25E5%25BE%2585%25E6%2595%25B4%25E7%2590%2586%25E7%25AC%2594%25E8%25AE%25B0%5Ccss%5Cimg%5C1565537324149.png)
-- 点(Xi,Yi,1)进行变换后的新坐标
-      ![1565537368512](D:%5C%25E5%25BE%2585%25E6%2595%25B4%25E7%2590%2586%25E7%25AC%2594%25E8%25AE%25B0%5Ccss%5Cimg%5C1565537368512.png)      
-
-即根据变换矩阵进行变换之后点 (xi,yi) 的坐标是(axi+cyi+e,bxi+dyi+f)   
-
-- > 旋转
-
-对某一元素应用旋转变换 rotate(θ)，相当于对其应用如下变换矩阵：
-
-![1565537470497](D:%5C%25E5%25BE%2585%25E6%2595%25B4%25E7%2590%2586%25E7%25AC%2594%25E8%25AE%25B0%5Ccss%5Cimg%5C1565537470497.png)
-
-即等价于矩阵变换函数 matrix(cosθ, sinθ, -sinθ, cosθ, 0, 0)。
-
-- > 平移
-
-对某一元素应用旋转变换 translate(X, Y)，相当于对其应用如下变换矩阵：
-
-![1565537523188](D:%5C%25E5%25BE%2585%25E6%2595%25B4%25E7%2590%2586%25E7%25AC%2594%25E8%25AE%25B0%5Ccss%5Cimg%5C1565537523188.png)
-
-即等价于使用矩阵变换函数 matrix(1, 0, 0, 1, X, Y)。
-
-- > 倾斜
-
-对某一元素应用倾斜变换 skew(α, β)，相当于对其应用如下变换矩阵：
-
-![1565537559578](D:%5C%25E5%25BE%2585%25E6%2595%25B4%25E7%2590%2586%25E7%25AC%2594%25E8%25AE%25B0%5Ccss%5Cimg%5C1565537559578.png)
-
-即等价于使用矩阵变换函数 matrix(1, tanβ, tanα,1, 0, 0)。
-
-- > 缩放
-
-对某一元素应用缩放变换 scale(scaleX, scaleY)，相当于对其应用如下变换矩阵：
-
-![1565537594837](D:%5C%25E5%25BE%2585%25E6%2595%25B4%25E7%2590%2586%25E7%25AC%2594%25E8%25AE%25B0%5Ccss%5Cimg%5C1565537594837.png)
-
-即等价于使用矩阵变换函数 matrix(scaleX, 0, 0, scaleY, 0, 0)
-
-## 2.3D变形
-
-在浏览器中，X轴是从左到右，Y轴是从上到下，Z轴是从里到外
-
-三维坐标系
+三维坐标系：
 
 - x 轴：水平向右  -- **注意：x 轴右边是正值，左边是负值**
 
 - y 轴：垂直向下  -- **注意：y 轴下面是正值，上面是负值**
 
 - z 轴：垂直屏幕  --  **注意：往外边的是正值，往里面的是负值**
-
-![1565676833478](D:%5C%25E5%25BE%2585%25E6%2595%25B4%25E7%2590%2586%25E7%25AC%2594%25E8%25AE%25B0%5Ccss%5Cimg%5C1565676833478.png)
 
 ### 2.1`3D` 转换知识要点
 
@@ -734,7 +649,7 @@ div:hover {
 - `transform: translate3d(x, y, z)`：其中x、y、z 分别指要移动的轴的方向的距离
 - **注意：x, y, z 对应的值不能省略，不需要填写用 0 进行填充**
 
-#### 1语法
+语法：
 
 ```css
 transform: translate3d(x, y, z)
@@ -765,8 +680,6 @@ transform: translate3d(100px, 100px, 0)
   - d：就是视距，视距就是指人的眼睛到屏幕的距离
 
   - z：就是 z 轴，z 轴越大(正值)，我们看到的物体就越大
-
-![perspective](D:%5C%25E5%25BE%2585%25E6%2595%25B4%25E7%2590%2586%25E7%25AC%2594%25E8%25AE%25B0%5Ccss%5CCSS3%5C05-CSS3%25E5%258F%2598%25E5%25BD%25A2.assets%5Cperspective.png)
 
 示例
 
