修改css过渡与动画

--- a/CSS/07.CSS3动画.md
+++ b/CSS/07.CSS3动画.md
@@ -10,9 +10,9 @@
 
 ### 1.1动画基本使用
 
-使用动画的准则：先定义动画，再调用动画。
+> 准则：先定义动画，再调用动画。
 
-- 定义动画语法
+定义动画语法：
 
 ```css
 @keyframes 动画名称 {
@@ -31,7 +31,7 @@
 
 用百分比来规定变化发生的时间，或用 `from` 和 `to`，等同于 0% 和 100%。为了得到最佳的浏览器支持，您应该始终定义 0% 和 100% 选择器。
 
-- 示例
+示例：
 
 ```css
 div {
