完善过渡部分笔记

--- a/CSS/08.CSS3过渡与变形.md
+++ b/CSS/08.CSS3过渡与变形.md
@@ -1,6 +1,6 @@
 ## 1.过渡
 
-众所周知，css效率极高，其变化的过程往往都是在一瞬间完成，速度极快。CSS `transition` 提供了一种在更改CSS属性时控制动画速度的方法。 其可以让属性变化成为一个持续一段时间的过程，而不是立即生效的。比如，将一个元素的颜色从白色改为黑色，通常这个改变是立即生效的，使用 CSS `transitions` 后该元素的颜色将逐渐从白色变为黑色，按照一定的曲线速率变化。
+众所周知，css效率极高，其变化的过程往往都是在一瞬间完成，速度极快。CSS `transition` 提供了一种在更改CSS属性时控制动画速度的方法。 其可以让属性变化成为一个持续一段时间的过程，而不是立即生效的。比如，将一个元素的颜色从白色改为黑色，通常这个改变是立即生效的，使用 CSS `transition` 后该元素的颜色将逐渐从白色变为黑色，按照一定的曲线速率变化。
 
 过渡常见属性：
 
@@ -44,7 +44,7 @@ div:hover {/*动画*/
 
 - `all`:默认值，表示所有可被动画的属性都表现出过渡动画。
 - `none`:没有过渡动画。
-- 属性名:可以指定多个需要过渡的属性名
+- 属性名:可以指定多个需要过渡的属性名,多个属性名之间使用逗号隔开。
 
 ```css
 .div{
@@ -65,7 +65,7 @@ div:hover {/*动画*/
 取值：
 
 - `0s`：默认值 ，表示不出现过渡动画，属性会瞬间完成转变。不接受负值。
-- 数值:以毫秒或秒为单位的数值，必须带单位。
+- 数值：以毫秒或秒为单位的数值，必须带单位。
 
 > 多个值情况：
 
